--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="service">
             <img src="./src/images/bolinha1.png" alt="Bolinha 1">
             <div class="service-info">
-                <h3>CEO</h3>
+                <h3>SEO</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod corrupti voluptatibus ipsa tempore autem reprehenderit vero quibusdam, soluta,
                      doloribus tenetur quae? Voluptatibus consectetur ea consequuntur, vitae non officia nihil deleniti!</p>
             </div>
